# rs-raytracer

./: .gitignore  Cargo.toml  README.md
src/: aabb.rs  box_prim.rs  bvh.rs  camera.rs  isotropic_mat.rs  light.rs  main.rs  material.rs  ray.rs  rectangle.rs  sphere.rs  texture.rs  traceable.rs  transform.rs  utils.rs  vec3.rs  volumetric.rs  world.rs
src/scenes/: mod.rs  scene1.rs  scene2.rs  scene3.rs  scene4.rs  scene5.rs  scene6.rs  scene7.rs  scene8.rs  scene_settings.rs
